Add postgres database integration
