# app/controllers/__init__.py
@@ -1,4 +1,5 @@
 from .project import (ProjectCPUView, ProjectMemoryUsageView,
                       ProjectNetworkRequestView)
 from .app import (AppCpuUsageView, AppMemoryUsageView, AppNetworkUsageView)
+from .database import (DatabaseSizeView , DatabaseConnectionsView)
 from .index import (IndexView)
